--- a/app/views/admin/items/index.html.erb
+++ b/app/views/admin/items/index.html.erb
@@ -1,39 +1,54 @@
 <%= flash[:notice] %>
 
-  <table>
-    <thread>
-      <tr>
-        <th>商品ID</th>
-        <th>商品名</th>
-        <th>税抜価格</th>
-        <th>ジャンル</th>
-        <th>ステータス</th>
-      </tr>
-    </thread>
-    <tbody>
-      <% @items.each do |item| %>
-        <tr>
-          <th><%= item.id %></th>
-          <th>
-            <%= link_to admin_item_path(item.id) do %>
-              <%= item.name %>
-            <% end %>
-          </th>
-          <th><%= item.price %></th>
-          <th><%= item.genre.name %></th>
-          <th>
-            <% if item.is_active == true %>
-              販売中
-            <% else %>
-              販売停止中
-            <% end %>
-          </th>
-        </tr>
-      <% end %>
-    </tbody>
-  </table>
-  <%= paginate @items %>
 
-    <span>
-      <%= link_to "新規登録", new_admin_item_path %>
-    </span>
+<div class="container">
+  <div class="row">
+    <div class="col-11">
+      <h2>商品一覧</h2>
+    </div>
+    <div class="col-1">
+      <h1>
+        <%= link_to new_admin_item_path do%>
+          <i class="fas fa-plus-circle"></i>
+        <% end %>
+      </h1>
+    </div>
+  </div>
+
+  <div class="row-lg-10">
+    <table class="table">
+      <thread>
+        <tr bgcolor="silver">
+          <th>商品ID</th>
+          <th>商品名</th>
+          <th>税抜価格</th>
+          <th>ジャンル</th>
+          <th>ステータス</th>
+        </tr>
+      </thread>
+      <tbody>
+        <% @items.each do |item| %>
+          <tr>
+            <th><%= item.id %></th>
+            <th>
+              <%= link_to admin_item_path(item.id) do %>
+                <%= item.name %>
+              <% end %>
+            </th>
+            <th><%= item.price %></th>
+            <th><%= item.genre.name %></th>
+            <th>
+              <% if item.is_active == true %>
+                販売中
+              <% else %>
+                販売停止中
+              <% end %>
+            </th>
+          </tr>
+        <% end %>
+        <tr></tr>
+      </tbody>
+    </table>
+  </div>
+</div>
+<div class="pagination justify-content-center"><%= paginate @items %></div>
