--- a/app/views/admin/items/show.html.erb
+++ b/app/views/admin/items/show.html.erb
@@ -1,40 +1,48 @@
 <%= flash[:notice] %>
 
-<h1>商品詳細</h1>
+<div class="container">
+  <div class="row">
+    <h1>商品詳細</h1>
+  </div>
+  <div class="row">
+    <div class="col-3">
+      <span><%= image_tag @item.image, size:"200x200" %></span>
+    </div>
+    <div class="col-6 offset-md-1">
+      <table class="table">
+        <tbody>
+          <tr>
+            <td>商品名</td>
+            <td><%= @item.name %></td>
+          </tr>
+          <tr>
+            <td>商品説明</td>
+            <td><%= @item.introduction %></td>
+          </tr>
+          <tr>
+            <td>ジャンル</td>
+            <td><%= @item.genre.name %></td>
+          </tr>
+          <tr>
+            <td>購入価格<br>(税抜価格)</td>
+            <td><%= (@item.price + @item.price*0.1).floor.to_s(:delimited) %>（<%= @item.price.to_s(:delimited) %>）円</td>
+          </tr>
+          <tr>
+            <td>販売ステータス</td>
+            <td>
+              <% if @item.is_active == true %>
+                販売中
+              <% else %>
+                販売停止中
+              <% end %>
+            </td>
+          </tr>
+        </tbody>
+      </table>
+    </div>
+  </div>
+</div>
 
-<span><%= image_tag @item.image, size:"200x200" %></span>
-
-<table class="table">
-  <tbody>
-    <tr>
-      <td>商品名</td>
-      <td><%= @item.name %></td>
-    </tr>
-    <tr>
-      <td>商品説明</td>
-      <td><%= @item.introduction %></td>
-    </tr>
-    <tr>
-      <td>ジャンル</td>
-      <td><%= @item.genre.name %></td>
-    </tr>
-    <tr>
-      <td>購入価格<br>(税抜価格)</td>
-      <td><%= (@item.price + @item.price*0.1).floor.to_s(:delimited) %>（<%= @item.price.to_s(:delimited) %>）円</td>
-    </tr>
-    <tr>
-      <td>販売ステータス</td>
-      <td>
-        <% if @item.is_active == true %>
-          販売中
-        <% else %>
-          販売停止中
-        <% end %>
-      </td>
-    </tr>
-  </tbody>
-</table>
-
-    <span>
-      <%= link_to "編集する", edit_admin_item_path(params[:id]) %>
-    </span>
+<div class="col text-center">
+  <%= link_to "　　編集する　　", edit_admin_item_path(params[:id]),class:"btn btn-success center-block" %>
+</div>
