--- a/app/views/public/addresses/index.html.erb
+++ b/app/views/public/addresses/index.html.erb
@@ -24,37 +24,37 @@
       <tr>
         <td>宛名</td>
         <td><%= f.text_area :name,:placeholder => "令和道子" %></td>
-        <td>
-          <div class="actions">
-            <%= f.submit "新規登録" %>
-          </div>
-        </td>
+        <td><%= f.submit "新規登録",class: "btn btn-success" %></td>
       </tr>
     </tbody>
   </table>
 <% end %>
 
-<table border="1" style="border-collapse: collapse",class ="table">
-    <thread>
-      <tr bgcolor="silver">
-        <td>郵便番号</td>
-        <td>住所</td>
-        <td>宛名</td>
-        <td></td>
-      </tr>
-    </thread>
-    <tbody>
-      <% @addresses.each do |address| %>
-        <tr>
-          <td><%= address.postal_code %></td>
-          <td><%= address.address %></td>
-          <td><%= address.name %></td>
-          <td>
-            <%= link_to "編集する", edit_address_path(address.id) %>
-            <!--削除ボタン-->
-            <%= link_to "削除する", address_path(address.id), method: :delete, "data-confirm" => "本当に削除しますか？" %>
-          </td>
-        </tr>
-      <% end %>
-    </tbody>
-</table>
+<div class="container">
+  <div class="row-lg-8">
+    <table class ="table table-bordered">
+        <thread>
+          <tr bgcolor="silver">
+            <td>郵便番号</td>
+            <td>住所</td>
+            <td>宛名</td>
+            <td></td>
+          </tr>
+        </thread>
+        <tbody>
+          <% @addresses.each do |address| %>
+            <tr>
+              <td><%= address.postal_code %></td>
+              <td><%= address.address %></td>
+              <td><%= address.name %></td>
+              <td>
+                <%= link_to "編集する", edit_address_path(address.id),class: "btn btn-success" %>
+                <!--削除ボタン-->
+                <%= link_to "削除する", address_path(address.id), method: :delete, "data-confirm" => "本当に削除しますか？",class: "btn btn-danger" %>
+              </td>
+            </tr>
+          <% end %>
+        </tbody>
+    </table>
+  </div>
+</div>
