--- a/app/views/public/cart_items/index.html.erb
+++ b/app/views/public/cart_items/index.html.erb
@@ -41,4 +41,4 @@
 <%= link_to '買い物を続ける', root_path, class: "btn btn-primary" %>
 
 <%# ショッピングカート下部分の表示機能, public/ordersを作成してもらったあとにパス変更！%>
-<%= link_to '情報入力に進む', confirm_public_orders_path, class: "btn btn-success" %>
+<%= link_to '情報入力に進む', confirm_orders_path, class: "btn btn-success" %>
