--- a/app/views/public/homes/top.html.erb
+++ b/app/views/public/homes/top.html.erb
@@ -1,5 +1,27 @@
 
+<div class="container">
+  <div class="row">
+    <div class="col-xs-2">
+      <!--ジャンル検索-->
+      <%= render 'public/items/genrevar', genres: @genres %>
+    </div>
+   </div>
+ </div>
+
 <div>ようこそながのCAKEへ！</div>
 <div>このサイトは、ケーキ販売のECサイトになります。</div>
 <div>会員ではない方も商品の閲覧はできますが、</div>
 <div>購入には会員登録が必要になります。</div>
+
+<!--一覧部分-->
+<table>
+  <tr><h3 style="margin: 20px 0;">新着商品</h3></tr>
+  <tr><% @items.each do |item| %></tr>
+  <div class="col-xs-3 text-center ">
+    <%= image_tag item.image, size:"200x200" %>
+    <div><%= link_to item.name, public_item_path(item) %></div>
+    <div>¥<%= item.price.to_s(:delimited) %></div>
+  <% end %>
+  </div>
+</table>
+<%= link_to "全ての商品を見る", public_items_path %>
