--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -25,7 +25,7 @@
 
       <!--＜管理者がログインした場合＞-->
       <% elsif admin_signed_in? %>
-      <ul class="navbar-nav">
+      <ul class="nav justify-content-end">
         <li class="nav-item">
           <%= link_to "商品一覧", admin_items_path, class: "nav-link"%>
         </li>
@@ -33,7 +33,7 @@
           <%= link_to "会員一覧", admin_customers_path, class: "nav-link" %>
         </li>
         <li class="nav-item">
-          <%= link_to "注文履歴一覧", class: "nav-link"%>
+          <%= link_to "注文履歴一覧",public_orders_path,  class: "nav-link"%>
         </li>
         <li class="nav-item">
         <%= link_to "ジャンル一覧", admin_genres_path, class: "nav-link"%>
@@ -46,7 +46,7 @@
 
       <!--＜サインインしていない場合＞-->
       <% else %>
-      <ul class="navbar-nav">
+      <ul class="nav justify-content-end">
         <li class="nav-item">
           <%= link_to "About", about_path, class: "nav-link" %>
         </li>
