--- a/app/views/public/items/show.html.erb
+++ b/app/views/public/items/show.html.erb
@@ -4,8 +4,8 @@
 　　　<!--ジャンル検索-->
       <%= render 'genrevar', genres: @genres %>
     </div>
-    
-    
+
+
     <div class="col-xs-6 col-sm-6 col-md-3 col-lg-3">
       <div class="col-xs-4 ">
         <%= image_tag @item.image, size:"200x200" %></p><br>
@@ -15,15 +15,15 @@
           <%= @item.name %>
           <%= @item.introduction %>
           ¥ <%= ((@item.price*1.1).floor).to_s(:delimited, delimiter: ',') %> (税込)
-          
+
           <!--個数選択-->
           <%= form_with model: @cart_item, url: cart_items_path do |f| %>
           <%= f.hidden_field :item_id, :value => @item.id %>
-          <%= f.select :amount, [['1個', 1], ['2個', 2], ['3個', 3], ['4個', 4], ['5個', 5], ['6個', 6], ['7個', 7], ['8個', 8], ['9個', 9]], {:prompt => "個数選択"} %>
+          <%= f.select :amount, [['1個', 1], ['2個', 2], ['3個', 3], ['4個', 4], ['5個', 5], ['6個', 6], ['7個', 7], ['8個', 8], ['9個', 9]], {:prompt => "個数選択"}, :required => true %>
           <%= f.submit "カートに入れる" %>
           <% end %>
         </div>
-      </div>  
+      </div>
     </div>
   </div>
 </div>
