--- a/app/views/public/registrations/new.html.erb
+++ b/app/views/public/registrations/new.html.erb
@@ -1,51 +1,60 @@
-<h2>新規会員登録</h2>
-
-<%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
-  <%= render "public/shared/error_messages", resource: resource %>
-
-  <table class="table">
-    <tbody>
-      <tr>
-        <td>名前</td>
-        <td>(姓)<%= f.text_field :last_name,:placeholder => "令和" %> </td>
-        <td>(名)<%= f.text_field :first_name,:placeholder => "道子" %></td>
-      </tr>
-      <tr>
-        <td>フリガナ</td>
-        <td>(セイ)<%= f.text_field :last_name_kana,:placeholder => "レイワ" %> </td>
-        <td>(メイ)<%= f.text_field :first_name_kana,:placeholder => "ミチコ" %></td>
-      </tr>
-      <tr>
-        <td>メールアドレス</td>
-        <td><%= f.email_field :email, autofocus: true, autocomplete: "email",:placeholder => "sample@example.com" %></td>
-      </tr>
-      <tr>
-        <td>郵便番号（ハイフンなし）</td>
-        <td><%= f.text_field :postal_code,:placeholder => "0000000" %></td>
-      </tr>
-      <tr>
-        <td>住所</td>
-        <td><%= f.text_area :address,:placeholder => "東京都渋谷区代々木神園町0-0" %></td>
-      </tr>
-      <tr>
-        <td>電話番号（ハイフンなし）</td>
-        <td><%= f.text_field :telephone_number,:placeholder => "00000000000" %></td>
-      </tr>
-      <tr>
-        <td>パスワード(<%= @minimum_password_length %>文字以上)</td>
-        <td><%= f.password_field :password, autocomplete: "new-password" %></td>
-      </tr>
-      <tr>
-        <td>パスワード(確認用)</td>
-        <td><%= f.password_field :password_confirmation %></td>
-      </tr>
-    </tbody>
-  </table>
-
-  <div class="actions">
-    <%= f.submit "Sign up" %>
+<div class="container">
+  <div class="row-lg-11">
+    <h2>新規会員登録</h2>
+    <div class="col-11">
+      <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
+        <%= render "public/shared/error_messages", resource: resource %>
+        <table class="table">
+          <tbody>
+            <tr>
+              <td>名前</td>
+              <td>(姓)<%= f.text_field :last_name,:placeholder => "令和",size:"20" %> </td>
+              <td>(名)<%= f.text_field :first_name,:placeholder => "道子",size:"20" %></td>
+            </tr>
+            <tr>
+              <td>フリガナ</td>
+              <td>(セイ)<%= f.text_field :last_name_kana,:placeholder => "レイワ",size:"20" %> </td>
+              <td>(メイ)<%= f.text_field :first_name_kana,:placeholder => "ミチコ",size:"20" %></td>
+            </tr>
+            <tr>
+              <td>メールアドレス</td>
+              <td><%= f.email_field :email, autofocus: true, autocomplete: "email",:placeholder => "sample@example.com",size:"20" %></td>
+            </tr>
+            <tr>
+              <td>郵便番号（ハイフンなし）</td>
+              <td><%= f.text_field :postal_code,:placeholder => "0000000",size:"20" %></td>
+            </tr>
+            <tr>
+              <td>住所</td>
+              <td><%= f.text_field :address,:placeholder => "東京都渋谷区代々木神園町0-0",size:"50" %></td>
+            </tr>
+            <tr>
+              <td>電話番号（ハイフンなし）</td>
+              <td><%= f.text_field :telephone_number,:placeholder => "00000000000",size:"20" %></td>
+            </tr>
+            <tr>
+              <td>パスワード(<%= @minimum_password_length %>文字以上)</td>
+              <td><%= f.password_field :password, autocomplete: "new-password",size:"20" %></td>
+            </tr>
+            <tr>
+              <td>パスワード(確認用)</td>
+              <td><%= f.password_field :password_confirmation,size:"20" %></td>
+            </tr>
+            <tr>
+              <td></td>
+              <td><%= f.submit "　　新規登録　　",class:"btn btn-success center-block" %></td>
+            </tr>
+          </tbody>
+        </table>
+      <% end %>
+    </div>
   </div>
-<% end %>
 
-<h2>既に登録済みの方</h2>
-<p><%= render "public/shared/links" %>からログインしてください。</p>
+  <div class="row-lg-11">
+    <h2>既に登録済みの方</h2>
+    <div class="col-11">
+      <p><%= render "public/shared/links" %>からログインしてください。</p>
+    </div>
+  </div>
+</div>
+
