--- a/app/views/public/items/index.html.erb
+++ b/app/views/public/items/index.html.erb
@@ -12,7 +12,7 @@
 
   <% @items.each do |item| %>
   <div class="col-xs-3 text-center ">
-    <p><%= image_tag item.image, size:"200x200" %></p>
+    <p><%= link_to (image_tag item.image, size:"200x200"), public_item_path(item) %></p>
     <p><%= link_to item.name, public_item_path(item)%></p>
     <p><%= item.price %>円</p>
   </div>
