--- a/app/views/public/orders/confirm.html.erb
+++ b/app/views/public/orders/confirm.html.erb
@@ -3,19 +3,19 @@
 <table>
    <th>商品名</th>
    <th>単価(税込)</th>
-   <th>数量</th></th>
+   <th>数量</th>
    <th>小計</th>
    <tr>
     <% total = 0 %>
      <% @cart_items.each do |cart_item| %>
       <tr>
         <td>
-           <%= attachment_image_tag(cart_item.item, :image, size: "70x50", fallback: "noimage.png") %>
+           <%= image_tag cart_item.item.image, size:"100x100" %>
            <%= cart_item.item.name %>
         </td>
         <td><%= (cart_item.item.price*1.1).to_i %></td>
         <td><%= cart_item.amount %></td>
-        <td><% subtotal = ((cart_item.item.price*cart_item.amount)*1.1).to_i %></td>
+        <% subtotal = ((cart_item.item.price*cart_item.amount)*1.1).to_i %>
         <td><%= subtotal %></td>
       </tr>
       <% total += (cart_item.item.price*cart_item.amount)*1.1 %>
