--- a/app/views/public/orders/index.html.erb
+++ b/app/views/public/orders/index.html.erb
@@ -17,7 +17,7 @@
               <%= order.customer.last_name %><%= order.customer.first_name %>
         </td>
         <td>
-          <%= order.items.each do |item| %>
+           <% order.items.each do |item| %>
            <%= item.name %>
            <% end %>
         </td>
