--- a/app/views/public/orders/show.html.erb
+++ b/app/views/public/orders/show.html.erb
@@ -1,1 +1,63 @@
-<h2>注文履歴詳細</h2>
+<h4>注文履歴詳細</h4>
+
+<h5>注文情報</h5>
+<table>
+   <tr>
+     <th>注文日</th>
+     <td><%= l @order.created_at %></td>
+   </tr>
+   <tr>
+     <th>配送先</th>
+     <td>〒<%= @order.customer.postal_code %>
+           <%= @order.customer.address %><br>
+           <%= @order.customer.last_name %><%= @order.customer.first_name %>
+     </td>
+   </tr>
+   <tr>
+     <th>支払方法</th>
+     <td><%= @order.payment_method_i18n %></td>
+   </tr>
+   <tr>
+     <th>ステータス</th>
+     <td><%= @order.status_i18n %></td>
+   </tr>
+</table>
+
+<h5>注文内容</h5>
+<table>
+   <th>商品</th>
+   <th>単価(税込)</th>
+   <th>個数</th>
+   <th>小計</th>
+   <tr>
+     <% total = 0 %>
+     <% @order.order_details.each do |order_detail| %>
+       <td><%= order_detail.item.name %></td>
+       <td><%= (order_detail.item.price*1.1).to_i %></td>
+       <td><%= order_detail.amount %></td>
+       <% subtotal = ((order_detail.item.price*order_detail.amount)*1.1).to_i %>
+       <td><%= subtotal %></td>
+   </tr>
+   <% total += subtotal %>
+   <% end %>
+</table>
+
+<h5>請求情報</h5>
+<table>
+     
+   <tr>
+     <th>商品合計</th>
+     <td><%= total.to_i %></td>
+   </tr>
+   <tr>
+     <th>配送料</th>
+     <% @order.shipping_cost = 800 %>
+     <td><%= @order.shipping_cost %></td>
+   </tr>
+   <tr>
+     <th>ご請求額</th>
+     <% @order.total_payment = @order.shipping_cost + total.to_i %>
+     <td><%= @order.total_payment %></td>
+   </tr>
+</table>
+
