--- a/app/views/public/cart_items/index.html.erb
+++ b/app/views/public/cart_items/index.html.erb
@@ -27,7 +27,8 @@
      <td><%= cart_item.item.with_tax_price.to_s(:delimited) %></td>
      <%= form_with model:[cart_item], url: cart_item_path(cart_item) do |f| %>
 
-     <td><%= f.select :amount, [['1個', 1], ['2個', 2], ['3個', 3], ['4個', 4], ['5個', 5], ['6個', 6], ['7個', 7], ['8個', 8], ['9個', 9]], {:prompt => "個数選択"}, :required => true %>
+     <td><%#= f.select :amount, ['1個', 1], ['2個', 2], ['3個', 3], ['4個', 4], ['5個', 5], ['6個', 6], ['7個', 7], ['8個', 8], ['9個', 9]], {:prompt => "個数選択"}, :required => true %>
+         <%= f.select :amount,(1..20).to_a, {:prompt => "個数選択"}, :required => true %>
          <%= f.submit "変更", class: "btn btn-success" %>
      </td>
    <% end %>
@@ -43,10 +44,5 @@
 <%# ショッピングカート真ん中部分の表示機能 %>
 <%= link_to '買い物を続ける', root_path, class: "btn btn-primary" %>
 
-<<<<<<< HEAD
-<%# ショッピングカート下部分の表示機能, public/ordersを作成してもらったあとにパス変更 %>
-<%#= link_to '情報入力に進む', new_order_path, class: "btn btn-success" %>
-=======
 <%# ショッピングカート下部分の表示機能, public/ordersを作成してもらったあとにパス変更！%>
 <%= link_to '情報入力に進む', new_order_path, class: "btn btn-success" %>
->>>>>>> origin/develop
