--- a/app/views/public/orders/show.html.erb
+++ b/app/views/public/orders/show.html.erb
@@ -1,7 +1,7 @@
 <h4>注文履歴詳細</h4>
 
 <h5>注文情報</h5>
-<table>
+<table class="table">
    <tr>
      <th>注文日</th>
      <td><%= l @order.created_at %></td>
