--- a/app/views/admin/orders/show.html.erb
+++ b/app/views/admin/orders/show.html.erb
@@ -10,21 +10,22 @@
     </tr>
     <tr>
       <td>注文日</td>
-      <td><%= @order.updated_at %></td>
+      <td><%= @order.updated_at.strftime("%Y/%m/%d") %></td>
     </tr>
     <tr>
       <td>配送先</td>
-      <td><%= @order.address %></td>
+      <td><%= @order.postal_code %> <%= @order.address %><br><%= @order.name %></td>
     </tr>
     <tr>
       <td>支払方法</td>
-      <td><%= @order.payment_method %></td>
+      <td><%= @order.payment_method_i18n %></td>
     </tr>
     <tr>
       <td>注文ステータス</td>
       <td>
         <%= form_with model: @order, url: admin_order_path, method: :patch do |f| %>
-          <%= f.select :status, Order.statuses.keys,{},{}  %>
+          <%= f.select :status, Order.statuses_i18n.invert,{},{}  %>
+          <%= f.submit "更新",class:"btn btn-success" %>
         <% end %>
       </td>
     </tr>
@@ -44,13 +45,13 @@
   </thread>
   <tbody>
     <tr>
-      <td><%= @order_detail.item.name %></td>
-      <td><%= (@order_detail.item.price + @order_detail.item.price*0.1) %></td>
-      <td><%= @order_detail.item.order_detail.amount %></td>
-      <td><%= @order_detail.making_status %></td>
+      <td><%#= @order_detail.item.name %></td>
+      <td><%#= (@order_detail.item.price + @order_detail.item.price*0.1) %></td>
+      <td><%#= @order_detail.item.order_detail.amount %></td>
+      <td><%#= @order_detail.making_status %></td>
       <td>
         <%= form_with model: @order, url: admin_order_path, method: :patch do |f| %>
-          <%= f.select :status, Order.statuses.keys,{},{}  %>
+          <%#= f.select :status, Order.statuses.keys,{},{}  %>
         <% end %>
       </td>
     </tr>
