--- a/app/views/admin/orders/show.html.erb
+++ b/app/views/admin/orders/show.html.erb
@@ -44,17 +44,29 @@
     </tr>
   </thread>
   <tbody>
-    <tr>
-      <td><%#= @order_detail.item.name %></td>
-      <td><%#= (@order_detail.item.price + @order_detail.item.price*0.1) %></td>
-      <td><%#= @order_detail.item.order_detail.amount %></td>
-      <td><%#= @order_detail.making_status %></td>
-      <td>
-        <%= form_with model: @order, url: admin_order_path, method: :patch do |f| %>
-          <%#= f.select :status, Order.statuses.keys,{},{}  %>
-        <% end %>
-      </td>
-    </tr>
+    <% @order.order_details.each do |order_detail| %>
+      <tr>
+        <td><%= order_detail.item.name %></td>
+        <td><%= (order_detail.item.price + order_detail.item.price*0.1).floor.to_s(:delimited) %></td>
+        <td><%= order_detail.amount %></td>
+        <td><%= ((order_detail.item.price + order_detail.item.price*0.1).floor*order_detail.amount).to_s(:delimited) %></td>
+        <td>
+          <%= form_with model: order_detail, url: admin_order_order_detail_path(params[:id],order_detail.id), method: :patch do |f| %>
+            <%= f.select :making_status, OrderDetail.making_statuses_i18n.invert,{},{}  %>
+            <%= f.submit "更新",class:"btn btn-success" %>
+          <% end %>
+        </td>
+      </tr>
+    <% end %>
   </tbody>
 </table>
 
+
+<table class="table">
+  <tbody>
+    <tr>
+      <td>商品合計</td>
+      <td><%#= @prices.to_s(:delimited) %>円</td>
+    </tr>
+  </tbody>
+</table>
