--- a/app/views/admin/customers/index.html.erb
+++ b/app/views/admin/customers/index.html.erb
@@ -4,11 +4,13 @@
     <div class="col-11">
       <h2>会員一覧</h2>
     </div>
+    <div class="col-1">
   </div>
  </div>
 
   <div class="row-lg-10">
     <table class="table">
+      <div class=container3>
       <thead>
        <tr bgcolor="silver">
          <th>会員ID</th>
@@ -32,6 +34,7 @@
         </th>
        </tr>
     <tr></tr>
+    </div>
    </tbody>
   </table>
  <div class="pagination justify-content-center">
