--- a/app/views/public/orders/confirm.html.erb
+++ b/app/views/public/orders/confirm.html.erb
@@ -13,12 +13,12 @@
            <%= image_tag cart_item.item.image, size:"100x100" %>
            <%= cart_item.item.name %>
         </td>
-        <td><%= (cart_item.item.price*1.1).to_i %></td>
+        <td><%= (cart_item.item.price*1.1).floor.to_s(:delimited) %></td>
         <td><%= cart_item.amount %></td>
-        <% subtotal = ((cart_item.item.price*cart_item.amount)*1.1).to_i %>
-        <td><%= subtotal %></td>
+        <% subtotal = ((cart_item.item.price*cart_item.amount)*1.1).floor%>
+        <td><%= subtotal.to_s(:delimited)  %></td>
       </tr>
-      <% total += (cart_item.item.price*cart_item.amount)*1.1 %>
+      <% total += subtotal %>
      <% end %>
    </tr>
 </table>
@@ -31,12 +31,12 @@
    </tr>
    <tr>
      <th>商品合計</th>
-     <td><%= total.to_i %></td>
+     <td><%= total.to_s(:delimited)%></td>
    </tr>
    <tr>
      <th>請求金額</th>
-     <% @order.total_payment = @order.shipping_cost + total.to_i %>
-     <td><%= @order.total_payment %></td>
+     <% @order.total_payment = total + 800 %>
+     <td><%= @order.total_payment.to_s(:delimited) %></td>
    </tr>
 </table>
 
