--- a/app/views/public/orders/index.html.erb
+++ b/app/views/public/orders/index.html.erb
@@ -18,10 +18,10 @@
         </td>
         <td>
            <% order.items.each do |item| %>
-           <%= item.name %>
+           <%= item.name %><br>
            <% end %>
         </td>
-        <td><%= order.total_payment %></td>
+        <td><%= order.total_payment.to_s(:delimited) %>円</td>
         <td><%= order.status_i18n %></td>
         <td><%= link_to '表示する', order_path(order), class: "btn btn-primary" %></td>
       </tr>
