--- a/app/views/public/orders/new.html.erb
+++ b/app/views/public/orders/new.html.erb
@@ -17,7 +17,7 @@
      </p>
 
     <h5 class="font-weight-bold">お届け先</h5>
-             <%= f.radio_button :address_id, 0, checked: "checked" %>
+             <%= f.radio_button :select_address, 0, checked: "checked" %>
              <%= f.label :order_address, "ご自身の住所" %>
         <br>
              〒<%= current_customer.postal_code %>
@@ -26,12 +26,12 @@
              <%= current_customer.last_name %>
              <%= current_customer.first_name %>
         <br>
-             <%= f.radio_button :address_id, 1 %>
+             <%= f.radio_button :select_address, 1 %>
              <%= f.label :order_address, "登録済住所から選択" %>
         <br>
              <%= f.select :address_id, options_from_collection_for_select(Address.all, :id, :address_display) %>
         <br>
-             <%= f.radio_button :address_id, 2 %>
+             <%= f.radio_button :select_address, 2 %>
              <%= f.label :order_address, "新しいお届け先" %>
         <table>
           <tr>
