--- a/app/views/public/orders/show.html.erb
+++ b/app/views/public/orders/show.html.erb
@@ -35,10 +35,10 @@
      <% total = 0 %>
      <% @order.order_details.each do |order_detail| %>
        <td><%= order_detail.item.name %></td>
-       <td><%= (order_detail.item.price*1.1).to_i %></td>
+       <td><%= (order_detail.item.price*1.1).floor.to_s(:delimited) %></td>
        <td><%= order_detail.amount %></td>
-       <% subtotal = ((order_detail.item.price*order_detail.amount)*1.1).to_i %>
-       <td><%= subtotal %></td>
+       <% subtotal = ((order_detail.item.price*order_detail.amount)*1.1).floor %>
+       <td><%= subtotal.to_s(:delimited) %></td>
    </tr>
    <% total += subtotal %>
    <% end %>
@@ -49,7 +49,7 @@
      
    <tr>
      <th>商品合計</th>
-     <td><%= total.to_i %></td>
+     <td><%= total.to_s(:delimited) %></td>
    </tr>
    <tr>
      <th>配送料</th>
@@ -58,8 +58,8 @@
    </tr>
    <tr>
      <th>ご請求額</th>
-     <% @order.total_payment = @order.shipping_cost + total.to_i %>
-     <td><%= @order.total_payment %></td>
+     <% @order.total_payment = total + 800 %>
+     <td><%= @order.total_payment.to_s(:delimited)  %></td>
    </tr>
 </table>
 
