--- a/app/views/public/orders/index.html.erb
+++ b/app/views/public/orders/index.html.erb
@@ -12,9 +12,9 @@
      <% @orders.each do |order| %>
       <tr>
         <td><%= l order.created_at %></td>
-        <td>〒<%= order.customer.postal_code %>
-              <%= order.customer.address %><br>
-              <%= order.customer.last_name %><%= order.customer.first_name %>
+        <td>〒<%= order.postal_code %>
+              <%= order.address %><br>
+              <%= order.name %>
         </td>
         <td>
            <% order.items.each do |item| %>
