--- a/app/views/public/orders/show.html.erb
+++ b/app/views/public/orders/show.html.erb
@@ -9,9 +9,9 @@
    </tr>
    <tr>
      <th>配送先</th>
-     <td>〒<%= @order.customer.postal_code %>
-           <%= @order.customer.address %><br>
-           <%= @order.customer.last_name %><%= @order.customer.first_name %>
+     <td>〒<%= @order.postal_code %>
+           <%= @order.address %><br>
+           <%= @order.name %>
      </td>
    </tr>
    <tr>
