--- a/app/views/public/orders/new.html.erb
+++ b/app/views/public/orders/new.html.erb
@@ -7,24 +7,26 @@
 <div class="row">
    <div class="col">
     <%= form_with model: @order, url: confirm_orders_path, method: :post, local: true do |f| %>
-    <h5 class="font-weight-bold">支払方法</h5>
-     <p>
+      <h5 class="font-weight-bold">支払方法</h5>
+
+       <p>
         <%= f.radio_button :payment_method, Order.payment_methods.key(0),checked: "checked" %>
         <%= f.label :payment_method_credit_card, Order.payment_methods_i18n[:credit_card] %>
-     <br>
+       <br>
         <%= f.radio_button :payment_method, Order.payment_methods.key(1) %>
         <%= f.label :payment_method_transfer, Order.payment_methods_i18n[:transfer]%>
-     </p>
+       </p>
+  
 
-    <h5 class="font-weight-bold">お届け先</h5>
-             <%= f.radio_button :select_address, 0, checked: "checked" %>
-             <%= f.label :order_address, "ご自身の住所" %>
-        <br>
-             〒<%= current_customer.postal_code %>
-             <%= current_customer.address %>
-        <br>
-             <%= current_customer.last_name %>
-             <%= current_customer.first_name %>
+       <h5 class="font-weight-bold">お届け先</h5>
+                 <%= f.radio_button :select_address, 0, checked: "checked" %>
+                 <%= f.label :order_address, "ご自身の住所" %>
+                <br>
+                〒<%= current_customer.postal_code %>
+                <%= current_customer.address %><br>
+                <%= current_customer.last_name %>
+                <%= current_customer.first_name %>
+            
         <br>
              <%= f.radio_button :select_address, 1 %>
              <%= f.label :order_address, "登録済住所から選択" %>
